Skip to content

elapsed time is f**ed up

I recently found out a bug in VLC after I installed VLC 3.0.0. My system configuration is:

Operating System: Microsoft Windows 10 Home (Version 1709 - OS Build 16299.192) 64-bit

VLC Media Player Version: 3.0.0 Vetinari (32-bit)

Bug: The time shown on both side of video i.e. time elapsed and remaining time is same.

Steps to Reproduce: Click on the total time to toggle to remaining time in 32-bit VLC installed on a 64-bit system.

Screenshot: Inline Image Attachment

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information