qt: Don't handle remaining time in Elapsed TimeLabel

Fix #19677
Regression introduced by 8784800a751548149d74707aa0be78b316b43c2b